Gestione casi limite: assenza di campi nel documento